Novas modificacoes no index

--- a/index.html
+++ b/index.html
@@ -12,5 +12,19 @@
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, sint.
         </p>
+
+        <h2>
+            Título 2
+        </h2>
+        <p>
+            Lorem ipsum dolor sit amet.
+        </p>
+
+        <h3>
+            Título 3
+        </h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, dicta.
+        </p>
     </body>
 </html>
